--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -22,7 +22,7 @@
 <header>
     <nav class="dws-menu">
         <ul>
-            <li><a target="_self" href="http://localhost:8080/#"><i class="fa fa-home"></i>Home</a></li>
+            <li><a target="_self" href="https://app-photocenter.herokuapp.com/"><i class="fa fa-home"></i>Home</a></li>
 
             <li><a href="#"><i class="fa fa-th-list"></i>Tables</a>
                 <ul>
